--- a/src/_includes/section.header.njk
+++ b/src/_includes/section.header.njk
@@ -5,6 +5,25 @@
         <p class="w-full tracking-tighter typeIt"></p>
       </div>
       <h1 class="font-bold tracking-widest text-4xl">We make investments in awesome technology companies</h1>
+      <div class="formBlock">
+        <form name="contact" method="POST" data-netlify="true">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+          <label for="country">Country</label>
+          <select id="country" name="country">
+            <option value="australia">Australia</option>
+            <option value="canada">Canada</option>
+            <option value="usa">USA</option>
+            <option value="norway">Norway</option>
+          </select>
+        
+          <input type="submit" value="Submit">
+        </form>
+      </div>
     </div>
     <div class="w-full sm:w-1/3">
       <img src="/img/mirage-easy-money.svg" alt="Investing in technology companies">
